unpackaged/main/default/objects/Used_Collective_Agreement__c/Used_Collective_Agreement__c.object-meta.xml
<CustomObject>
    <label>Used Collective Agreement</label>
    <nameField>
        <displayFormat>UCA-{00000000}</displayFormat>
        <label>Used Collective Agreement Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Used Collective Agreements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>