unpackaged/main/default/objects/Used_Collective_Agreement__c/fields/Agreement_Title_UCA__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Title_UCA__c</fullName>
    <formula>Collective_agreement_IDCC_Lead__r.Agreement_Title__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agreement Title</label>
    <type>Text</type>
</CustomField>