unpackaged/main/default/objects/Used_Collective_Agreement__c/fields/Collective_agreement_IDCC_Lead__c.field-meta.xml
<CustomField>
    <fullName>Collective_agreement_IDCC_Lead__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Collective agreement IDCC</label>
    <referenceTo>Collective_agreement__c</referenceTo>
    <relationshipLabel>Used Collective Agreements</relationshipLabel>
    <relationshipName>Used_Collective_Agreements</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>