unpackaged/main/default/objects/Used_Collective_Agreement__c/fields/Lead_UCA__c.field-meta.xml
<CustomField>
    <fullName>Lead_UCA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Used Collective Agreements</relationshipLabel>
    <relationshipName>Used_Collective_Agreements</relationshipName>
    <type>Lookup</type>
</CustomField>