unpackaged/main/default/objects/Used_Collective_Agreement__c/validationRules/Mandatory_Lead_field.validationRule-meta.xml
<ValidationRule>
    <fullName>Mandatory_Lead_field</fullName>
    <active>true</active>
    <description>Make users fill in the Lead field</description>
    <errorConditionFormula>ISBLANK(Lead_UCA__c)</errorConditionFormula>
    <errorDisplayField>Lead_UCA__c</errorDisplayField>
    <errorMessage>The Lead field is mandatory</errorMessage>
</ValidationRule>